--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,20 @@
     "name": "karol/doria",
     "description": "A PHP application for tracking expensions",
     "type": "project",
-    "require": {},
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    },
     "autoload":{
         "psr-4":{
             "Framework\\": "src/Framework",
             "App\\":"src/App"
-        }
-    }
-
+        },
+        "files": [
+            "src/App/Config/Routes.php",
+            "src/App/Config/Middleware.php"
+        ]
+    },
+    "scripts": {
+        "phpiggy": "php cli.php"
+}
 }
