--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "karol/doria",
-    "description": "A PHP application for tracking expensions",
+    "description": "Budget App PHP",
     "type": "project",
     "require": {
         "vlucas/phpdotenv": "^5.6"
@@ -16,6 +16,6 @@
         ]
     },
     "scripts": {
-        "phpiggy": "php cli.php"
+        "budgetApp": "php cli.php"
 }
 }
